--- a/1.网络/2.1.tcp不同时刻接收syn如何处理.md
+++ b/1.网络/2.1.tcp不同时刻接收syn如何处理.md
@@ -5,7 +5,7 @@
 * 服务端处于LAST-ACK
 * 服务端处于TIME-WAIT
 
-正常的三次握手
+### 正常的三次握手
 ```
       TCP A                                                TCP B
 
@@ -22,7 +22,7 @@
           Basic 3-Way Handshake for Connection Synchronization
 ```
 
-正常的四次挥手
+### 正常的四次挥手
 ```
       TCP A                                                TCP B
 
