--- a/1.网络/2.2.tcp重传机制.md
+++ b/1.网络/2.2.tcp重传机制.md
@@ -1,5 +1,5 @@
 # tcp重传机制
-kernel版本3.10.0
+kernel版本3.10
 
 ### 三次握手时期
 1. 第一次握手丢失，客户端重传SYN，重传tcp_syn_retries次
@@ -34,6 +34,6 @@ kernel版本3.10.0
    * 告诉发送方哪些数据重复接收了
    * 目的是帮助TCP了解网络情况，更好地做网络流控
 * 总超时时长阈值由TCP_RTO_MIN=200ms、TCP_RTO_MAX=120s和net.ipv4.tcp_retries2控制
-* 真实总超时时长由真实RTO和重传次数控制
-  * net.ipv4.tcp_retries2<=9时，RTO较小时，真实重传次数会接近net.ipv4.tcp_retries2；RTO较大时，真实重传次数会远小于net.ipv4.tcp_retries2
-  * net.ipv4.tcp_retries2>9时，真实重传次数会接近net.ipv4.tcp_retries2，因为最大RTO上限是TCP_RTO_MAX=120s
+* 真实总超时时长由实际RTO和实际重传次数控制
+  * net.ipv4.tcp_retries2<=9时，RTO较小时，实际重传次数会接近net.ipv4.tcp_retries2；RTO较大时，实际重传次数会远小于net.ipv4.tcp_retries2
+  * net.ipv4.tcp_retries2>9时，实际重传次数会接近net.ipv4.tcp_retries2，因为最大RTO上限是TCP_RTO_MAX=120s
