--- a/1.网络/2.3.tcp的time_wait为什么是2MSL.md
+++ b/1.网络/2.3.tcp的time_wait为什么是2MSL.md
@@ -1,5 +1,5 @@
 # tcp的time_wait为什么是2MSL
-kernel=3.10 TCP_TIMEWAIT_LEN=60s --> MSL=30s
+kernel版本3.10 TCP_TIMEWAIT_LEN=60s --> MSL=30s
 
 ### 正常的4次挥手
 ```
@@ -33,6 +33,6 @@ kernel=3.10 TCP_TIMEWAIT_LEN=60s --> MSL=30s
 4. 主动关闭方回复ACK，进入TIME_WAIT，ACK丢失在网络中
 5. 被动关闭方重传FIN，一直丢失在网络中，挥手期间，默认初始重传间隔TCP_RTO_MIN=200ms，第8次重传FIN时，时间已经历51s，如果此次FIN超过9s，被动关闭方就不能优雅关闭了。
 
-> 结论：主动关闭方等待TIME_WAIT并不能保证被动关闭方优雅关闭
+> 结论：主动关闭方等待2MSL并不能保证被动关闭方优雅关闭
 
 ### 情况二
