--- a/1.网络/1.2.https之RSA握手过程.md
+++ b/1.网络/1.2.https之RSA握手过程.md
@@ -31,11 +31,11 @@
 
   * 一句话总结，就是根CA公钥验证中间CA公钥，中间CA公钥验证服务器公钥。
 
-* 为何`根CA`不直接对服务器直接签名？
-  * 因为`根CA私钥`泄露的话，影响范围更大，不经常出面签名的泄露风险就更低。
+* 为何`根CA`不直接为服务器签名？
+  * 因为`根CA私钥`泄露的话，影响范围更大，不直接为服务器签名，泄露风险就更低。
 
 * 为何`CA私钥`不直接对原始信息加密，而是对原始信息哈希后的摘要值加密？
-  * 因为非对称密钥的效率比较低，摘要值比原始信息内容小很多。
+  * 因为非对称密钥的效率比较低，摘要值比原始信息内容小的多。
 
 # 防止中间人攻击
 
