--- a/1.网络/1.3.https之ECDHE握手过程.md
+++ b/1.网络/1.3.https之ECDHE握手过程.md
@@ -21,7 +21,7 @@
    服务端回复`服务端Encrypted Handshake Message`。
 
 * 为何有了RSA算法，还要ECDHE算法
-  * 因为RSA算法不支持前向安全，如果中间人截获了历史数据密文，也获得服务器RSA私钥，那么就可解密历史明文；ECDHE每次的连接主要依靠临时的非对称密钥，只泄露密钥对0不会对历史数据造成影响。
+  * 因为RSA算法不支持前向安全，如果中间人截获了历史数据密文，也获得服务器RSA私钥，那么就可解密历史明文；ECDHE每次的连接主要依靠临时的非对称密钥，泄露密钥对0+临时服务端私钥只能解密当次的连接数据，以往的临时服务端私钥获取不到，就不会对历史数据造成影响。
 
 * 为什么第3步的`client key exchange`没有包含摘要值密文？
 
