--- a/1.网络/2.3.tcp的time_wait为什么是2MSL.md
+++ b/1.网络/2.3.tcp的time_wait为什么是2MSL.md
@@ -20,19 +20,19 @@ kernel版本3.10 TCP_TIMEWAIT_LEN=60s --> MSL=30s
   6.  (2 MSL)
       CLOSED
 ```
+先说说主动关闭主为什么需要time_wait
 
-如果主动关闭方跳过TIME_WAIT直接进入CLOSED状态，或者在TIME_WAIT停留的时长不足，那么当被动关闭方早先发出的延迟重复包（数据包或者FIN包）到达后，就可能出现类似下面的问题：
-* 旧的TCP连接已经不存在了，收到FIN包，主动关闭方只能回应RST包，被动关闭方不是优雅关闭
-* 新的TCP连接被建立起来了，收到数据包，可能会干扰新连接
+如果主动关闭方跳过TIME_WAIT直接进入CLOSED状态，或者在TIME_WAIT停留的时长不足，就可能出现类似下面的问题：
+* 被动关闭方重传FIN包，主动关闭方只能回应RST包，被动关闭方不是优雅关闭
+* 双方建立新的连接，主动关闭方可能收到延迟的数据包，对数据造成干扰
 
 ### 情况一
-如果被动关闭方一直没收到最后一个ACK，会一直重传FIN，重试次数由tcp_orphan_retries控制，默认值为0，实则代表8
+如果被动关闭方一直没收到最后一个ACK，会重传FIN，重试次数由tcp_orphan_retries控制，linux系统默认值为0，实则代表8
 1. 主动关闭方发起关闭，发送FIN
 2. 被动关闭方回复ACK
 3. 被动关闭方发送FIN
 4. 主动关闭方回复ACK，进入TIME_WAIT，ACK丢失在网络中
-5. 被动关闭方重传FIN，一直丢失在网络中，挥手期间，默认初始重传间隔TCP_RTO_MIN=200ms，第8次重传FIN时，时间已经历51s，如果此次FIN超过9s，被动关闭方就不能优雅关闭了。
+5. 被动关闭方重传FIN，一直丢失在网络中，挥手期间，默认初始重传间隔TCP_RTO_MIN=200ms，第8次重传FIN时，时间已经历51s，如果此次FIN经过N（N>9）秒后到达主动关闭方，此时主动关闭方已进入CLOSED状态，会向被动关闭方回应RST
+6. 如果以上的第3步传输的是FIN+数据包，就可能对主动关闭方造成数据干扰
 
-> 结论：主动关闭方等待2MSL并不能保证被动关闭方优雅关闭
-
-### 情况二
+> 结论：主动关闭方等待2MSL并不能完全保证被动关闭方优雅关闭和主动关闭方数据干扰，只能做到被动关闭方超时MSL之后，再次重传的FIN+数据包不对主动关闭方造成数据干扰，问题就变成为什么要求被动关闭方超时MSL之后不能再次重传？我猜测可能是超时最大值设定与MSL相同，好制定吧，可能依据真实的网络延迟，这样的值即不会太大也不会太小。
