--- a/3.数据库/2.5.checkpoint.md
+++ b/3.数据库/2.5.checkpoint.md
@@ -1,7 +1,7 @@
 # checkpoint目的
 * 缩短数据库恢复的时长
-* buffer pool空间不足时，将脏数据写到磁盘上
-* redo log不可用时，将脏数据写到磁盘上
+* 保证充足buffer pool的空间，buffer pool不足会怎样？
+* 保证充足redo log的空间，redo log不足时，新的redo log重写了未落盘的数据，在数据库崩溃就会造成数据丢失
 
 # checkpoint分类
 * sharp checkpoint: 数据库正常关闭时，刷新全部脏页到磁盘
